Finishing Lab 1 and adding images

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -6,26 +6,21 @@
   <title>Siddhant Tiwari</title>
 </head>
 <body>
-  
+  <h1>Siddhant Tiwari's Labs For INST377</h1>
+  <h2>Album names</h2>
+  <ol>
+    <li>J Cole - The Off-Season</li>
+    <li>Drake - If You're Reading This Its Too Late</li>
+    <li>Young Thug- Slime Season 3</li>
+    <li>G Herbo - 25</li>
+    <li>Westside Boogie - Everything for Sale</li>
+  </ol>
+  <h2>Image Carousel</h2>
+  <img src='images/mochi.gif'/>
+  <img src='images/mochi.jpg'/>
+  <img src='images/mochi.png'/>
+  <img src='images/mochi.svg'/>
+  <p>The above mochi emojis are in the order of gif, jpg, png, and svg.</p>
+  <a href="https://github.com/Siddhantz/INST377-Lab-Work">My Github Account</a>
 </body>
 </html>
-include your HTML opening tags
-and your hidden "head" tag
-and your "title" tag
-
-
-full-width wrapper div
-  header containing: YOUR NAME's Labs For INST377
-  container div
-      left div
-        sub-header saying "albums"
-        Your top 5 albums in an ordered list
-      right div (main div for the site)
-        sub-header saying "image carousel"
-          div to contain four images
-            four images of mochi from your readings, all square (they're four different image types!)
-          div to contain a description or text
-            description of images
-
-
-full-width page footer containing your github account name and a link to your gitHub account
