--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,10 +1,45 @@
-Replace this with your complete HTML from Lab 1
-
-Hook it up to CSS by including style.css in the <head> tag
-
-Then add CSS class names to your HTML to make it look like the lab pictures.
-For example: <div class="selector">
-
-You should not need to edit the CSS to do this, only the HTML.
-
-Don't forget to add an actual set of image descriptions to your image carousel.
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Siddhant Tiwari</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+    <div class="wrapper">
+        <!------warper----------->
+        <header class="header"><h1>Siddhant Tiwari's Labs For INST377</h1></header>
+        <div class="container">
+            <!------container----------->
+            <div class="left_section box">
+                <!------left side-----------> 
+                <h2>Album names</h2>
+                <ol class="box">
+                <li>J Cole - The Off-Season</li>
+                <li>Drake - If You're Reading This Its Too Late</li>
+                <li>Young Thug- Slime Season 3</li>
+                <li>G Herbo - 25</li>
+                <li>Westside Boogie - Everything for Sale</li>
+                </ol>  
+            </div>
+            <div class="right_section box"> <!-------right side-->
+                <h2>Image Carousel</h2>
+                <div class="grid"> <!---image box-->
+                    <img src='images/mochi.gif'/>
+                    <img src='images/mochi.jpg'/>
+                    <img src='images/mochi.png'/>
+                    <img src='images/mochi.svg'/>
+                </div>
+                    <div class="box">
+                    <p>The above mochi emojis are in the order of gif, jpg, png, and svg.</p>
+                    </div>
+            </div>
+        </div>
+    </div>
+        
+<footer class="footer">
+    My Github account name <a href="https://github.com/Siddhantz/INST377-Lab-Work">My Github Account</a>
+</footer>
+</body>
+</html>
