--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -7,7 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header class="header">
+            <h1>Siddhant's 377 Labs</h1>
+        </header>
+        <div class="container">
+            <div class="left_section box">
+                <h3>Form Inputs</h3>
+                <form action='https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json' class="box"> Restaurant Name
+                    <label for="resto"></label>
+                    <input type="text" name="resto" id="resto">
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+            <div class="right_section box">
+                <h3>Local Restaurants</h3>
+                <div class="restaurant_list box">
+                    A list of local restaurants
+                </div>
+            </div>
+        </div>
+            <footer class="footer">
+                My Github account name <a href="https://github.com/Siddhantz/INST377-Lab-Work">My Github Account</a>
+            </footer>
+    </div>
 </body>
 </html>
 
