--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,26 +1,12 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Siddhant Tiwari</title>
+    <title>Prince George's County Fire Stations Data</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <h1>Siddhant Tiwari's Labs For INST377</h1>
-  <h2>Album names</h2>
-  <ol>
-    <li>J Cole - The Off-Season</li>
-    <li>Drake - If You're Reading This Its Too Late</li>
-    <li>Young Thug- Slime Season 3</li>
-    <li>G Herbo - 25</li>
-    <li>Westside Boogie - Everything for Sale</li>
-  </ol>
-  <h2>Image Carousel</h2>
-  <img src='images/mochi.gif'/>
-  <img src='images/mochi.jpg'/>
-  <img src='images/mochi.png'/>
-  <img src='images/mochi.svg'/>
-  <p>The above mochi emojis are in the order of gif, jpg, png, and svg.</p>
-  <a href="https://github.com/Siddhantz/INST377-Lab-Work">My Github Account</a>
+    <canvas id="chart"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
